syntax = "proto3";

service DBToDoQuery {
    rpc ToDoQuery(ToDoQueryRequest) returns (ToDoQueryResponse) {}
}

message ToDoQueryRequest {
    int32 id = 1;
}

message ToDoQueryResponse {
    string title = 1;
    bool completed = 2;
}